deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started-app
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: getting-started-app
  template:
    metadata:
      labels:
        app: getting-started-app
    spec:
      containers:
        - name: getting-started-app
          image: 869133926016.dkr.ecr.ap-south-1.amazonaws.com/eks-hands-on
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: ebs-storage
              mountPath: /etc/todos/
      volumes:  # Moved inside spec.template.spec
        - name: ebs-storage
          persistentVolumeClaim:
            claimName: getting-started-app-pvc
